--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
         "express": "^4.18.2"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.11.5",
         "@types/raf": "^3.4.3",
