--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@prisma/client": "^5.8.1",
         "cors": "^2.8.5",
         "dotenv": "^16.3.2",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "prisma": "^5.8.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
