--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,36 @@
 {
-    "name": "backend",
-    "version": "1.0.0",
-    "description": "",
-    "main": "dist/index.js",
-    "scripts": {
-        "build": "npx tsc",
-        "start": "node dist/index.js",
-        "dev": "nodemon src/index.ts"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@prisma/client": "^5.8.1",
-        "cors": "^2.8.5",
-        "dotenv": "^16.3.2",
-        "express": "^4.18.2",
-        "prisma": "^5.8.1"
-    },
-    "devDependencies": {
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
-        "@types/node": "^20.11.5",
-        "@types/raf": "^3.4.3",
-        "nodemon": "^3.0.3",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
-    }
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "dist/index.js",
+	"scripts": {
+		"build": "npx tsc",
+		"start": "node dist/index.js",
+		"dev": "nodemon src/index.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@prisma/client": "^5.8.1",
+		"bcrypt": "^5.1.1",
+		"cors": "^2.8.5",
+		"crypto-js": "^4.2.0",
+		"dotenv": "^16.3.2",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"prisma": "^5.8.1"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.17",
+		"@types/crypto-js": "^4.2.1",
+		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/node": "^20.11.5",
+		"@types/raf": "^3.4.3",
+		"nodemon": "^3.0.3",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3"
+	}
 }
