--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,13 @@
 {
-    "compilerOptions": {
-        "target": "es2016",                                 
-        "module": "commonjs",                               
-        "esModuleInterop": true,                            
-        "forceConsistentCasingInFileNames": true,        
-        "strict": true,                                      
-        "skipLibCheck": true,    
-        "outDir": "./dist",                             
-    },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "**/*.spec.ts"],
+	"compilerOptions": {
+		"target": "es2016",
+		"module": "commonjs",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		"skipLibCheck": true,
+		"outDir": "./dist"
+	},
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "**/*.spec.ts"]
 }
