--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-three/fiber": "^8.15.14",
-    "@types/three": "^0.160.0",
-    "axios": "^1.6.5",
-    "next": "14.1.0",
-    "next-pwa": "^5.6.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "three": "^0.160.0"
-  },
-  "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/next-pwa": "^5.6.9",
-    "@types/node": "^20.11.5",
-    "@types/raf": "^3.4.3",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "dotenv": "^16.3.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+	"name": "frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@react-three/fiber": "^8.15.14",
+		"@types/three": "^0.160.0",
+		"axios": "^1.6.5",
+		"crypto-js": "^4.2.0",
+		"jsonwebtoken": "^9.0.2",
+		"next": "14.1.0",
+		"next-pwa": "^5.6.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"three": "^0.160.0"
+	},
+	"devDependencies": {
+		"@types/crypto-js": "^4.2.1",
+		"@types/dotenv": "^8.2.0",
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/next-pwa": "^5.6.9",
+		"@types/node": "^20.11.5",
+		"@types/raf": "^3.4.3",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"dotenv": "^16.3.2",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.0",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
