--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^5.8.1",
+		"axios": "^1.6.6",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.2.0",
