--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,20 @@
 		"@types/three": "^0.160.0",
 		"axios": "^1.6.5",
 		"crypto-js": "^4.2.0",
+		"framer-motion": "^11.0.3",
+		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"next": "14.1.0",
 		"next-pwa": "^5.6.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-zoom-pan-pinch": "^3.3.0",
 		"three": "^0.160.0"
 	},
 	"devDependencies": {
 		"@types/crypto-js": "^4.2.1",
 		"@types/dotenv": "^8.2.0",
+		"@types/js-cookie": "^3.0.6",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/next-pwa": "^5.6.9",
 		"@types/node": "^20.11.5",
