--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,13 @@
 		"@prisma/client": "^5.8.1",
 		"axios": "^1.6.6",
 		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.2.0",
 		"dotenv": "^16.3.2",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
+		"priorityqueuejs": "^2.0.0",
 		"prisma": "^5.8.1"
 	},
 	"devDependencies": {
@@ -29,6 +31,7 @@
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.5",
 		"@types/node": "^20.11.5",
+		"@types/priorityqueuejs": "^1.0.4",
 		"@types/raf": "^3.4.3",
 		"nodemon": "^3.0.3",
 		"ts-node": "^10.9.2",
