--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
 		"axios": "^1.6.6",
 		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.2.0",
 		"dotenv": "^16.3.2",
@@ -26,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
+		"@types/cookie-parser": "^1.4.6",
 		"@types/cors": "^2.8.17",
 		"@types/crypto-js": "^4.2.1",
 		"@types/express": "^4.17.21",
