--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@react-three/drei": "^9.97.1",
 		"@react-three/fiber": "^8.15.14",
 		"@types/three": "^0.160.0",
 		"axios": "^1.6.5",
