--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"next-pwa": "^5.6.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-responsive": "^9.0.2",
 		"react-zoom-pan-pinch": "^3.3.0",
 		"three": "^0.160.0"
 	},
