--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,21 +9,35 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@react-three/drei": "^9.97.1",
 		"@react-three/fiber": "^8.15.14",
 		"@types/three": "^0.160.0",
 		"axios": "^1.6.5",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
 		"crypto-js": "^4.2.0",
+		"date-fns": "^3.3.1",
 		"framer-motion": "^11.0.3",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
+		"lucide-react": "^0.331.0",
 		"next": "14.1.0",
 		"next-pwa": "^5.6.0",
 		"react": "^18",
+		"react-day-picker": "^8.10.0",
 		"react-dom": "^18",
+		"react-hook-form": "^7.50.1",
 		"react-responsive": "^9.0.2",
 		"react-zoom-pan-pinch": "^3.3.0",
-		"three": "^0.160.0"
+		"tailwind-merge": "^2.2.1",
+		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.160.0",
+		"zod": "^3.22.4",
+		"zustand": "^4.5.1"
 	},
 	"devDependencies": {
 		"@types/crypto-js": "^4.2.1",
