--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 		"crypto-js": "^4.2.0",
 		"date-fns": "^3.3.1",
 		"framer-motion": "^11.0.3",
+		"hamburger-react": "^2.5.0",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.331.0",
