--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"priorityqueuejs": "^2.0.0",
-		"prisma": "^5.8.1"
+		"prisma": "^5.8.1",
+		"resend": "^3.2.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
