--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-progress": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-three/drei": "^9.97.1",
