--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@prisma/client": "^5.8.1",
+		"@prisma/client": "^5.11.0",
 		"axios": "^1.6.6",
 		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.2",
@@ -21,6 +21,7 @@
 		"crypto-js": "^4.2.0",
 		"dotenv": "^16.3.2",
 		"express": "^4.18.2",
+		"express-rate-limit": "^7.2.0",
 		"jsonwebtoken": "^9.0.2",
 		"priorityqueuejs": "^2.0.0",
 		"prisma": "^5.8.1",
