--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-scroll-area": "^1.0.5",
+		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-three/drei": "^9.97.1",
@@ -29,6 +31,7 @@
 		"hamburger-react": "^2.5.0",
 		"js-cookie": "^3.0.5",
 		"jsonwebtoken": "^9.0.2",
+		"libphonenumber-js": "^1.10.59",
 		"lucide-react": "^0.331.0",
 		"next": "14.1.0",
 		"next-pwa": "^5.6.0",
