--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.160.0",
+		"vaul": "^0.9.0",
 		"zod": "^3.22.4",
 		"zustand": "^4.5.1"
 	},
