--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@react-three/drei": "^9.97.1",
 		"@react-three/fiber": "^8.15.14",
+		"@tanstack/react-query": "^5.32.0",
 		"@types/three": "^0.160.0",
 		"aos": "^2.3.4",
 		"axios": "^1.6.5",
