--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-progress": "^1.0.3",
+		"@radix-ui/react-radio-group": "^1.1.3",
 		"@radix-ui/react-scroll-area": "^1.0.5",
 		"@radix-ui/react-select": "^2.0.0",
 		"@radix-ui/react-slot": "^1.0.2",
@@ -26,6 +27,7 @@
 		"axios": "^1.6.5",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"credit-card-type": "^10.0.0",
 		"crypto-js": "^4.2.0",
 		"date-fns": "^3.3.1",
 		"framer-motion": "^11.0.3",
