--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
 		"express": "^4.18.2",
 		"express-rate-limit": "^7.2.0",
 		"jsonwebtoken": "^9.0.2",
+		"moment-timezone": "^0.5.45",
 		"priorityqueuejs": "^2.0.0",
 		"prisma": "^5.8.1",
 		"resend": "^3.2.0"
