--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.160.0",
+		"validator": "^13.11.0",
 		"vaul": "^0.9.0",
 		"zod": "^3.22.4",
 		"zustand": "^4.5.1"
@@ -64,6 +65,7 @@
 		"@types/raf": "^3.4.3",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/validator": "^13.11.9",
 		"autoprefixer": "^10.0.1",
 		"dotenv": "^16.3.2",
 		"eslint": "^8",
