--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,16 +42,17 @@
 		"react": "^18",
 		"react-day-picker": "^8.10.0",
 		"react-dom": "^18",
-		"react-hook-form": "^7.50.1",
+		"react-hook-form": "^7.51.4",
 		"react-player": "^2.15.1",
 		"react-responsive": "^9.0.2",
 		"react-zoom-pan-pinch": "^3.3.0",
+		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.2.1",
 		"tailwindcss-animate": "^1.0.7",
 		"three": "^0.160.0",
 		"validator": "^13.11.0",
 		"vaul": "^0.9.0",
-		"zod": "^3.22.4",
+		"zod": "^3.23.6",
 		"zustand": "^4.5.1"
 	},
 	"devDependencies": {
