--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
 		"@radix-ui/react-accordion": "^1.1.2",
+		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-progress": "^1.0.3",
@@ -23,6 +24,7 @@
 		"@react-three/fiber": "^8.15.14",
 		"@tanstack/react-query": "^5.32.0",
 		"@types/three": "^0.160.0",
+		"@videsk/tailwind-random-color": "^0.2.0-beta",
 		"aos": "^2.3.4",
 		"axios": "^1.6.5",
 		"class-variance-authority": "^0.7.0",
