--- a/backend/package.json
+++ b/backend/package.json
@@ -1,44 +1,44 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"description": "",
-	"main": "dist/index.js",
-	"scripts": {
-		"build": "npx tsc",
-		"start": "node dist/index.js",
-		"dev": "nodemon src/index.ts"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"@prisma/client": "^5.13.0",
-		"axios": "^1.6.6",
-		"bcrypt": "^5.1.1",
-		"body-parser": "^1.20.2",
-		"cookie-parser": "^1.4.6",
-		"cors": "^2.8.5",
-		"crypto-js": "^4.2.0",
-		"dotenv": "^16.3.2",
-		"express": "^4.18.2",
-		"express-rate-limit": "^7.2.0",
-		"jsonwebtoken": "^9.0.2",
-		"priorityqueuejs": "^2.0.0",
-		"prisma": "^5.13.0",
-		"resend": "^3.2.0"
-	},
-	"devDependencies": {
-		"@types/bcrypt": "^5.0.2",
-		"@types/cookie-parser": "^1.4.6",
-		"@types/cors": "^2.8.17",
-		"@types/crypto-js": "^4.2.1",
-		"@types/express": "^4.17.21",
-		"@types/jsonwebtoken": "^9.0.5",
-		"@types/node": "^20.12.8",
-		"@types/priorityqueuejs": "^1.0.4",
-		"@types/raf": "^3.4.3",
-		"nodemon": "^3.0.3",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
-	}
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "npx tsc",
+    "start": "node public/index.js",
+    "dev": "nodemon src/index.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^5.13.0",
+    "axios": "^1.6.6",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.2",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "priorityqueuejs": "^2.0.0",
+    "prisma": "^5.13.0",
+    "resend": "^3.2.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.1",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.12.8",
+    "@types/priorityqueuejs": "^1.0.4",
+    "@types/raf": "^3.4.3",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  }
 }
