--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node public/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts -p $PORT"
   },
   "keywords": [],
   "author": "",
